# mainlyai

./: .gitignore  .gitmodules  README.md  REUSE.toml  install.sh  pyproject.toml
.github/workflows/: mirror.yml  pr.yml  publish-localbot.yml  publish-mirmod.yml
apps/cdc/: README.md  __main__.py  hatch.toml  pyproject.toml
apps/cdc/cdc/: __main__.py
apps/localbot/: .gitignore  __main__.py  cli_args.py  event_handler.py  pyproject.toml  runtime_manager.py
apps/localbot/config/: __init__.py  schema.py
apps/localbot/localbot/: __main__.py  cli_args.py  event_handler.py  resource_reporting.py  runtime_manager.py
apps/localbot/localbot/config/: __init__.py  schema.py
dockerfiles/cdc/: Dockerfile
dockerfiles/processor/: Dockerfile  Dockerfile.minimal  requirements.minimal.txt  requirements.txt
scripts/: create_cmuufn.py  prefabs_cli.py  setup_missing_packages.py
