[tool.poe.tasks]
# run with eg `uv run poe fmt`
fmt = "ruff format ${PWD}"
lint = "ruff check --fix ${PWD}"
test = "pytest ${PWD}"
# run all the above
all = [ {ref="fmt"}, {ref="lint"}, {ref="test"} ]

"ci:fmt" = "ruff format --check ${PWD}"  # fail if not formatted
"ci:lint" = "ruff check ${PWD}"
"build:docker:processor" = "docker build --platform linux/amd64 -t mainlyai/processor:latest --build-arg 'CACHEBUST=$(date +%s)' -f dockerfiles/processor/Dockerfile ."
"build:docker:processor:push" = "docker push mainlyai/processor:latest"
build = [ {ref="build:mirmod"}, {ref="build:miranda_admin_ops"} ]

[tool.poe.tasks."build:mirmod"]
cmd = "uv build"
cwd = "./packages/mirmod"

[tool.poe.tasks."build:miranda_admin_ops"]
cmd = "uv build"
cwd = "./packages/miranda_admin_ops"

[project]
name = "mainlyai"
version = "0.1.0"
description = "Mainly AI monorepo"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["mirmod", "miranda_admin_ops"]

[tool.uv.sources]
mirmod = { workspace = true }
miranda_admin_ops = { workspace = true }

[dependency-groups]
dev = [
    "poethepoet>=0.32.0",
    "pytest >= 8.3.4",
    "ruff >= 0.8.5",
]

[tool.uv.workspace]
members = ["packages/*", "apps/*"]
