[tool.poe.tasks]
# run with eg `uv run poe fmt`
fmt = "ruff format ${PWD}"
lint = "ruff check --fix ${PWD}"
test = "pytest ${PWD}"
# run all the above
all = [ {ref="fmt"}, {ref="lint"}, {ref="test"} ]

"ci:fmt" = "ruff format --check ${PWD}"  # fail if not formatted
"ci:lint" = "ruff check ${PWD}"
"build:docker:processor" = [
    {cmd="docker build --platform linux/amd64 -t mainlyai/processor:latest --build-arg 'CACHEBUST=$(date +%s)' --build-arg 'LOGZOD_ARCH=x86_64' -f dockerfiles/processor/Dockerfile ."},
    {cmd="docker build --platform linux/amd64 -t mainlyai/processor:ubuntu-24.04-cuda-12.9.1 --build-arg 'CACHEBUST=$(date +%s)' --build-arg 'LOGZOD_ARCH=x86_64' --build-arg 'BASE_IMAGE=nvidia/cuda:12.9.1-devel-ubuntu24.04' -f dockerfiles/processor/Dockerfile ."},
    {cmd="docker build --platform linux/amd64 -t mainlyai/processor:debug --build-arg 'CACHEBUST=$(date +%s)' --build-arg 'LOGZOD_ARCH=x86_64-debug' -f dockerfiles/processor/Dockerfile ."},
]
"build:docker:processor:push" = [
    {cmd="docker push mainlyai/processor:latest"},
    {cmd="docker push mainlyai/processor:ubuntu-24.04-cuda-12.9.1"},
    {cmd="docker push mainlyai/processor:debug"},
    {shell="VERSION=$(python3 -c \"import tomllib; print(tomllib.load(open('./packages/mirmod/pyproject.toml', 'rb'))['project']['version'])\") && docker tag mainlyai/processor:latest mainlyai/processor:$VERSION && docker push mainlyai/processor:$VERSION"},
    {shell="VERSION=$(python3 -c \"import tomllib; print(tomllib.load(open('./packages/mirmod/pyproject.toml', 'rb'))['project']['version'])\") && docker tag mainlyai/processor:debug mainlyai/processor:$VERSION-debug && docker push mainlyai/processor:$VERSION-debug"},
    {shell="VERSION=$(python3 -c \"import tomllib; print(tomllib.load(open('./packages/mirmod/pyproject.toml', 'rb'))['project']['version'])\") && docker tag mainlyai/processor:ubuntu-24.04-cuda-12.9.1 mainlyai/processor:$VERSION-ubuntu-24.04-cuda-12.9.1 && docker push mainlyai/processor:$VERSION-ubuntu-24.04-cuda-12.9.1"},
]
"build:docker:cdc" = [
    {ref="build:cdc"},
    {cmd="docker build --platform linux/amd64 -t mainlyai/cdc:latest -f dockerfiles/cdc/Dockerfile ."},
]
"build:docker:cdc:push" = "docker push mainlyai/cdc:latest"
build = [ {ref="build:mirmod"}, {ref="build:miranda_admin_ops"}, {ref="build:cdc"}, {ref="build:localbot"} ]

[tool.poe.tasks."build:mirmod"]
cmd = "uv build"
cwd = "./packages/mirmod"

[tool.poe.tasks."build:miranda_admin_ops"]
cmd = "uv build"
cwd = "./packages/miranda_admin_ops"

[tool.poe.tasks."build:cdc"]
cmd = "uv build"
cwd = "./apps/cdc"

[tool.poe.tasks."build:localbot"]
cmd = "uv build"
cwd = "./apps/localbot"

[project]
name = "mainlyai"
version = "5.3.0"
description = "Mainly AI monorepo"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["mirmod", "miranda_admin_ops"]

[tool.uv.sources]
mirmod = { workspace = true }
miranda_admin_ops = { workspace = true }

[dependency-groups]
dev = [
    "poethepoet>=0.32.0",
    "pytest >= 8.3.4",
    "ruff >= 0.8.5",
]

[tool.uv.workspace]
members = ["packages/*", "apps/*"]
