[project]
name = "cdc"
version = "0.0.1"
description = "Change Data Capture daemon used for poor mans ebus"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mirmod",
    "mysql-replication"
]

[dependency-groups]
dev = [
    "poethepoet>0",
    "pytest>0",
    "ruff>0",
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
